[project]
name = "qiskit-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pylatexenc>=2.10",
    "python-dotenv>=1.2.1",
    "qiskit>=2.2.3",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.43.1",
]
